Se actualiza bypassauth y se modifica template de path

--- a/templatesNuclei/Authentication/sqli-boolean-based-post.yaml
+++ b/templatesNuclei/Authentication/sqli-boolean-based-post.yaml
@@ -14,7 +14,7 @@ http:
     path: 
       - "{{BaseURL}}"
    
-    body: "admin={{empty}}"
+    body: "username={{empty}}"
 
     payloads:
       empty:
@@ -30,7 +30,7 @@ http:
     path: 
       - "{{BaseURL}}"
    
-    body: "admin={{injection}}"
+    body: "username={{injection}}"
 
     payloads:
       injection:
