se agrega password

--- a/templatesNuclei/Authentication/sqli-boolean-based-post.yaml
+++ b/templatesNuclei/Authentication/sqli-boolean-based-post.yaml
@@ -30,7 +30,7 @@ http:
     path: 
       - "{{BaseURL}}"
    
-    body: "username={{injection}}"
+    body: "username={{injection}}&password="
 
     payloads:
       injection:
