se agregan usuarios comunes para distintas plataformas

--- a/templatesNuclei/Authentication/login-bypass-detect.yaml
+++ b/templatesNuclei/Authentication/login-bypass-detect.yaml
@@ -1,7 +1,7 @@
 id: login-bruteforce-check
 
 info:
-  name: Login Bruteforce T
+  name: Login Bruteforce Test
   author: Luis Webster
   severity: medium
   description: |
@@ -21,108 +21,141 @@ requests:
 
     payloads:
       user:
-        - "carlos"
-        - "htb-stdnt"
+        # Usuarios básicos comunes
+        - "admin"
+        - "administrator"
         - "root"
-        - "admin"
-        - "test"
-        - "guest"
-        - "info"
-        - "adm"
-        - "mysql"
+        - "system"
         - "user"
-        - "administrator"
-        - "oracle"
+        - "guest"
+        - "test"
+        - "demo"
+        - "htb-stdnt"
+        
+        
+        # Usuarios comunes en sistemas Linux/Unix
+        - "bin"
+        - "daemon"
+        - "mail"
         - "ftp"
-        - "pi"
-        - "puppet"
-        - "ansible"
-        - "ec2-user"
-        - "vagrant"
-        - "azureuser"
-        - "academico"
-        - "acceso"
-        - "access"
-        - "accounting"
-        - "accounts"
-        - "acid"
-        - "activestat"
-        - "ad"
-        - "adam"
-        - "adkit"
-        - "admin"
-        - "administracion"
+        - "http"
+        - "nobody"
+        - "dbus"
+        - "systemd"
+        - "sshd"
+        - "nginx"
+        - "mysql"
+        - "postgres"
+        - "oracle"
+        - "redis"
+        - "mongodb"
+        
+        # Usuarios comunes en entornos Windows
         - "administrador"
-        - "administrator"
-        - "administrators"
-        - "admins"
-        - "ads"
-        - "adserver"
-        - "adsl"
-        - "ae"
-        - "af"
-        - "affiliate"
-        - "affiliates"
-        - "afiliados"
-        - "ag"
-        - "agenda"
-        - "agent"
-        - "ai"
-        - "aix"
-        - "ajax"
-        - "ak"
-        - "akamai"
-        - "al"
-        - "alabama"
-        - "alaska"
-        - "albuquerque"
-        - "alerts"
-        - "alpha"
-        - "alterwind"
-        - "am"
-        - "amarillo"
-        - "americas"
-        - "an"
-        - "anaheim"
-        - "analyzer"
-        - "announce"
-        - "announcements"
-        - "antivirus"
-        - "ao"
-        - "ap"
-        - "apache"
-        - "apollo"
-        - "app"
-        - "app01"
-        - "app1"
-        - "apple"
-        - "application"
-        - "applications"
-        - "apps"
-        - "appserver"
-        - "aq"
-        - "ar"
-        - "archie"
-        - "arcsight"
-        - "argentina"
-        - "arizona"
-        - "arkansas"
-        - "arlington"
-        - "as"
-        - "as400"
-        - "asia"
-        - "asterix"
-        - "at"
-        - "athena"
-        - "atlanta"
-        - "atlas"
-        - "att"
-        - "au"
-        - "auction"
-        - "austin"
-        - "auth"
-        - "auto"
-        - "autodiscover"
+        - "backup"
+        - "sql"
+        - "mssql"
+        - "iis"
+        - "exchange"
+        - "adfs"
+        - "sharepoint"
+        
+        # Usuarios comunes en dispositivos IoT/redes
+        - "cisco"
+        - "router"
+        - "supervisor"
+        - "tech"
+        - "support"
+        - "ubnt"
+        - "default"
+        - "pi"
+        - "raspberry"
+        
+        # Usuarios comunes en paneles de administración web
+        - "manager"
+        - "operator"
+        - "webadmin"
+        - "webmaster"
+        - "sysadmin"
+        - "control"
+        - "superuser"
+        - "supervisor"
+        
+        # Usuarios comunes en servicios cloud
+        - "aws"
+        - "ec2-user"
+        - "azure"
+        - "gcp"
+        - "cloud"
+        - "kube"
+        - "docker"
+        
+        # Usuarios comunes en CMS
+        - "wordpress"
+        - "joomla"
+        - "drupal"
+        - "magento"
+        - "prestashop"
+        - "opencart"
+        
+        # Usuarios corporativos comunes
+        - "info"
+        - "contact"
+        - "sales"
+        - "marketing"
+        - "hr"
+        - "finance"
+        - "it"
+        - "dev"
+        - "developer"
+        - "qa"
+        
+        # Usuarios regionales comunes
+        - "usuario"
+        - "utilizador"
+        - "benutzer"
+        - "utilisateur"
+        - "utente"
+        - "gebruiker"
+        
+        # Nombres comunes de personas
+        - "john"
+        - "michael"
+        - "david"
+        - "robert"
+        - "james"
+        - "richard"
+        - "thomas"
+        - "daniel"
+        - "paul"
+        - "mark"
+        - "lisa"
+        - "sarah"
+        - "jennifer"
+        - "michaela"
+        - "maria"
+        
+        # Usuarios de ejemplo/desarrollo
+        - "temp"
+        - "backup"
+        - "restore"
+        - "debug"
+        - "tester"
+        - "stage"
+        - "staging"
+        - "devuser"
+        
+        # Otros usuarios comunes
+        - "anonymous"
+        - "service"
+        - "server"
+        - "client"
+        - "custom"
+        - "standard"
+        - "public"
+        - "private"
+        - "secure"
+        - "security"
 
     matchers:
       - type: word
